--- a/habitat_baselines/config/pointnav/ppo_pointnav.yaml
+++ b/habitat_baselines/config/pointnav/ppo_pointnav.yaml
@@ -6,9 +6,9 @@ TRAINER_NAME: "ppo"
 ENV_NAME: "NavRLEnv"
 SIMULATOR_GPU_ID: 0
 TORCH_GPU_ID: 0
-VIDEO_OPTION: []
+# VIDEO_OPTION: []
 # Can be uncommented to generate videos.
-# VIDEO_OPTION: ["disk", "tensorboard"]
+VIDEO_OPTION: ["disk", "tensorboard"]
 TENSORBOARD_DIR: "tb"
 VIDEO_DIR: "video_dir"
 TEST_EPISODE_COUNT: 994
@@ -18,7 +18,7 @@ NUM_PROCESSES: 4
 # Note:  To train the an RGB only model,
 # you may need to use 8 processes with 4 mini batches,
 # If so, the number of updates should be cut in half
-SENSORS: ["DEPTH_SENSOR"]
+SENSORS: ["RGB_SENSOR", "DEPTH_SENSOR"]
 CHECKPOINT_FOLDER: "data/new_checkpoints"
 NUM_UPDATES: 270000
 LOG_INTERVAL: 25
@@ -28,8 +28,10 @@ RL:
   PPO:
     # ppo params
     clip_param: 0.1
+    # update次數
     ppo_epoch: 4
     # This was 4 in the paper
+    # 一般的mini_batch
     num_mini_batch: 2
     value_loss_coef: 0.5
     entropy_coef: 0.01
