--- a/habitat_baselines/config/pointnav/ppo_pointnav_example.yaml
+++ b/habitat_baselines/config/pointnav/ppo_pointnav_example.yaml
@@ -1,16 +1,16 @@
 BASE_TASK_CONFIG_PATH: "configs/tasks/pointnav.yaml"
-TRAINER_NAME: "ppo"
+TRAINER_NAME: "ppo_"
 ENV_NAME: "NavRLEnv"
 SIMULATOR_GPU_ID: 0
 TORCH_GPU_ID: 0
 VIDEO_OPTION: ["disk", "tensorboard"]
-TENSORBOARD_DIR: "tb"
+TENSORBOARD_DIR: "tb_example"
 VIDEO_DIR: "video_dir"
 TEST_EPISODE_COUNT: 2
 EVAL_CKPT_PATH_DIR: "data/new_checkpoints"
-NUM_PROCESSES: 1
+NUM_PROCESSES: 2
 SENSORS: ["RGB_SENSOR", "DEPTH_SENSOR"]
-CHECKPOINT_FOLDER: "data/new_checkpoints"
+CHECKPOINT_FOLDER: "data/example/new_checkpoints"
 NUM_UPDATES: 10000
 LOG_INTERVAL: 10
 CHECKPOINT_INTERVAL: 50
@@ -27,6 +27,7 @@ RL:
     eps: 1e-5
     max_grad_norm: 0.5
     num_steps: 128
+    cnn_output_size: 128
     hidden_size: 512
     use_gae: True
     gamma: 0.99
