--- a/habitat_baselines/config/pointnav/ppo_pointnav_example.yaml
+++ b/habitat_baselines/config/pointnav/ppo_pointnav_example.yaml
@@ -7,13 +7,13 @@ VIDEO_OPTION: ["disk", "tensorboard"]
 TENSORBOARD_DIR: "tb_example"
 VIDEO_DIR: "video_dir"
 TEST_EPISODE_COUNT: 2
-EVAL_CKPT_PATH_DIR: "data/new_checkpoints"
+EVAL_CKPT_PATH_DIR: "data/example/new_checkpoints"
 NUM_PROCESSES: 2
 SENSORS: ["RGB_SENSOR", "DEPTH_SENSOR"]
 CHECKPOINT_FOLDER: "data/example/new_checkpoints"
 NUM_UPDATES: 10000
 LOG_INTERVAL: 10
-CHECKPOINT_INTERVAL: 50
+CHECKPOINT_INTERVAL: 500
 
 RL:
   PPO:
@@ -35,3 +35,5 @@ RL:
     use_linear_clip_decay: True
     use_linear_lr_decay: True
     reward_window_size: 50
+    # depth decoder
+    
